--- a/MultiLayout1/src/app/admin/employee/employee.component.html
+++ b/MultiLayout1/src/app/admin/employee/employee.component.html
@@ -1,1 +1,18 @@
-<p>employee works!</p>
+<h2>Employees List</h2>
+<table class="table">
+    <thead>
+        <tr>
+           <th>Emp.Id</th>
+           <th>Dept.Id</th>
+           <th>Emp.Name</th> 
+           <th>Emp.Salary</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let emp of employees">
+            <td>{{emp.empId}}</td>
+            <td>{{emp.deptId}}</td>
+            <td>{{emp.empName}}</td>
+        </tr>
+    </tbody>
+</table>
