--- a/Assessment-4/angular/src/app/Layout/admin-layout/admin-layout.component.html
+++ b/Assessment-4/angular/src/app/Layout/admin-layout/admin-layout.component.html
@@ -1,2 +1,25 @@
+<div class="container">
 
-<router-outlet></router-outlet>
+    <div class="row">
+        <div class="col-12">
+        <app-admin-header></app-admin-header>
+        </div>
+    </div>
+</div>
+<br>
+<br>
+<br>
+<div class="container">
+    <div class="row" style="min-height: 600px;">
+        <div class="col-12">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row" style="min-height: 300px;">
+        <div class="col-12">
+        <app-admin-footer></app-admin-footer>
+        </div>
+    </div>
+</div>
