--- a/Assessment-4/angular/src/app/shared/admin-footer/admin-footer.component.html
+++ b/Assessment-4/angular/src/app/shared/admin-footer/admin-footer.component.html
@@ -1,1 +1,7 @@
-<p>admin-footer works!</p>
+<div class="container">
+<div class="row">
+    <div class="col-12">
+        Designed By : Snad developers
+    </div>
+</div>
+</div>
