--- a/Assessment-4/angular/src/app/shared/admin-header/admin-header.component.html
+++ b/Assessment-4/angular/src/app/shared/admin-header/admin-header.component.html
@@ -1,1 +1,9 @@
-<p>admin-header works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <a [routerLink]="['./dashboard']">Dashboard</a> &nbsp;&nbsp; | &nbsp; &nbsp;
+            <a [routerLink]="['./employee']">Employee</a> &nbsp;&nbsp; | &nbsp; &nbsp;
+            <a [routerLink]="['./department']">Department</a>
+        </div>
+    </div>
+</div>
